# wasm-canvas-perf

./: README.md  index.html  package-lock.json  package.json  report.numbers  results.numbers
.github/workflows/: gh-pages.yml
automation/: package-lock.json  package.json  tsconfig.json
automation/src/: consts.ts  js-cpu.ts  js-fps.ts  js-memory.ts  utils.ts  wasm-cpu.ts  wasm-fps.ts  wasm-memory.ts
automation/src/measures/: consts.ts  cpu.ts  fps.ts  memory.ts  utils.ts
js/: index.js  index.js.map
js-canvas/: package-lock.json  package.json  tsconfig.json
js-canvas/page/: index.css  index.html
js-canvas/src/: index.ts
page/: index.css  index.html
wasm/: wasm_canvas.d.ts  wasm_canvas.js  wasm_canvas_bg.wasm  wasm_canvas_bg.wasm.d.ts
wasm-canvas/: Cargo.toml  package-lock.json  package.json
wasm-canvas/page/: index.html
wasm-canvas/src/: lib.rs
webgpu/: index.css  index.html  index.js
webgpu-canvas/: package-lock.json  package.json  tsconfig.json
webgpu-canvas/page/: index.css  index.html
webgpu-canvas/src/: index.ts
