[package]
name = "wasm-canvas"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.84"
js-sys = "0.3.60"

[dependencies.getrandom]
version = "0.2.8"
features = ["js"]

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'Location',
  'UrlSearchParams'
]
